--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,35 @@ h1{
   text-decoration: underline;
 }
 
+.customers-main{
+  background: #F3F5F9;
+  text-align: center;
+  padding: 30px;
+}
+
+.customers-main h4{
+  color: #6F7B97;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+.customers-img{
+  display: inline-block;
+  padding: 0 10px;
+  width: 49%;
+}
+
+.customers-img img{
+  width: 100%;
+}
+
 /* Media Query */
+@media screen and (min-width: 768px){
+  .customers-img{
+    width: 16%;
+  }
+}
+
 @media screen and (min-width: 1200px){
   h1{
     font-size: 60px;
