--- a/css/style.css
+++ b/css/style.css
@@ -57,11 +57,16 @@ h5+p{
   background-color: #004AFF;
 }
 
-.navbar-nav > li > a.signup-btn{
+.signup-btn{
   border:1px solid #006AFF;
   color: #006AFF;
+  background-color: #fff;
+}
+
+.navbar-nav > li > a.signup-btn{
   padding: 5px 15px;
   margin-top: 10px;
+  color: #006AFF;
 }
 
 .jumbotron-bg{
@@ -213,7 +218,7 @@ h1{
   width: 50px;
 }
 
-.world-regions{
+.blue-gradient-bg{
   background-image: linear-gradient(#0149C6, #001E9A);
   color: #fff;
   padding: 50px 0;
@@ -230,7 +235,6 @@ h1{
 
 .second-slider-main .slider{
   background: #fff;
-  /* width: 100%; */
   padding: 30px 0;
 }
 
@@ -244,6 +248,38 @@ h1{
 
 .second-slider-main .slider a{
   margin-top: 15px;
+}
+
+.bottom-footer{
+  background-color: #031C4E;
+  padding: 30px 0;
+}
+
+.copyright{
+  color: #7A859D;
+  font-weight: 500;
+  margin: 0;
+  padding-top: 15px;
+}
+
+.bottom-footer{
+  font-size: 15px;
+}
+
+.bottom-footer h5{
+  color: #fff;
+}
+
+.bottom-footer ul li{
+  padding: 5px 0;  
+}
+
+.bottom-footer ul li a{
+  color: #7A859D;
+}
+
+.bottom-footer ul.list-inline i{
+  font-size: 23px;
 }
 
 /* Media Query */
