--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* commons */
 body{
   font-family: 'Roboto', sans-serif;
   color: #031C4E;
@@ -9,6 +10,7 @@ a{
 
 h2{
   text-align: center;
+  margin-bottom: 30px;
 }
 
 h3{
@@ -35,7 +37,52 @@ h2+p, h1+p{
 h5+p{
   font-size: 15px;
 }
+/* end commons */
 
+
+/* utilities */
+.signup-btn{
+  border:1px solid #006AFF;
+  color: #006AFF;
+  background-color: #fff;
+}
+
+.gm-btn{
+  background-color: #579AFF;
+  color: #fff;
+}
+
+.google-btn{
+  box-shadow: 1px 1px 2px #999;
+  color: #626262;
+  position: relative;
+}
+
+.google-btn img{
+  height: 20px;
+  position: absolute;
+  left: 15px;
+}
+
+.grey-bg{
+  background: #F3F5F9;
+  text-align: center;
+  padding: 50px 0;
+}
+
+.white-bg{
+  padding: 50px 0;
+}
+
+.blue-gradient-bg{
+  background-image: linear-gradient(#0149C6, #001E9A);
+  color: #fff;
+  padding: 50px 0;
+}
+/* end utilities */
+
+
+/* navbar */
 .gm-navbar{
   margin: 0;
   font-weight: 500;
@@ -57,18 +104,15 @@ h5+p{
   background-color: #004AFF;
 }
 
-.signup-btn{
-  border:1px solid #006AFF;
-  color: #006AFF;
-  background-color: #fff;
-}
-
 .navbar-nav > li > a.signup-btn{
   padding: 5px 15px;
   margin-top: 10px;
   color: #006AFF;
 }
+/* end navbar */
 
+
+/* jumbotron */
 .jumbotron-bg{
   background-image: url(../img/sfondo-pesci.svg);
   background-size: cover;
@@ -78,9 +122,6 @@ h5+p{
 
 h1{
   color: #fff;
-}
-
-.gm-jumbotron{
 }
 
 .gm-jumbotron p{
@@ -94,23 +135,6 @@ h1{
   border-radius: 5px;
 }
 
-.gm-btn{
-  background-color: #579AFF;
-  color: #fff;
-}
-
-.google-btn{
-  box-shadow: 1px 1px 2px #999;
-  color: #626262;
-  position: relative;
-}
-
-.google-btn img{
-  height: 20px;
-  position: absolute;
-  left: 15px;
-}
-
 .terms-service{
   padding: 15px;
 }
@@ -118,17 +142,10 @@ h1{
 .terms-service a{
   text-decoration: underline;
 }
+/* end jumbotron */
 
-.white-bg{
-  padding: 50px 0;
-}
 
-.grey-bg{
-  background: #F3F5F9;
-  text-align: center;
-  padding: 50px 30px;
-}
-
+/* customers main */
 .customers-main h4{
   color: #5C6A88;
   text-transform: uppercase;
@@ -144,7 +161,10 @@ h1{
 .customers-img img{
   width: 100%;
 }
+/* end customers main */
 
+
+/* showing main */
 .showing-main .heading{
   padding-bottom: 50px;
   text-align: center;
@@ -167,35 +187,52 @@ h1{
 .showing-main button:focus{
   border-left-color: #016AFF;
 }
+/* end showing main */
 
-.gm-slider{
-  padding: 30px 0;
+
+/* first slider */
+.slider-box {
+  position: relative;
+  height: 100%;
 }
 
-.gm-slider .slider{
-  display: inline-block;
-  vertical-align: middle;
-  width: calc(100% - 50px);
+.slider-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-.first-slider-main .slider img{
+.slider-arrow i{
+  font-size: 60px;
+  font-weight: bolder;
+}
+
+.slider-inner {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.slider-inner img{
   width: 100%;
 }
-.first-slider-main .slider p{
+
+.first-slider .slider-inner p{
   color: #031C4E;
-  font-size: 15px;
+  font-size: 16px;
+  font-weight: 500;
   padding-top: 15px;
 }
 
-.gm-slider i{
-  font-size: 50px;
-  font-weight: bolder;
-  color: #6F7B97;
-  display: inline-block;
+.slider-arrow-left {
+  left: 0;
 }
 
-.gm-slider i:last-child{
-  color: #031C4E;
+.slider-arrow-right {
+  right: 0;
+}
+
+.disabled {
+  opacity: .5;
 }
 
 .slider-menu button{
@@ -209,7 +246,9 @@ h1{
 .slider-menu button:focus{
   background-color: #006AFF;
 }
+/* end first slider */
 
+/* features main */
 .features-main [class*="col-"]{
   margin-top: 30px;
 }
@@ -217,13 +256,10 @@ h1{
 .features-main img{
   width: 50px;
 }
+/* end features main */
 
-.blue-gradient-bg{
-  background-image: linear-gradient(#0149C6, #001E9A);
-  color: #fff;
-  padding: 50px 0;
-}
 
+/* world regions main */
 .world-regions tr:first-child th,
 .world-regions tr:first-child td{
   border-top: 0;
@@ -232,24 +268,27 @@ h1{
 .world-regions a{
   color: #fff;
 }
+/* end world regions main */
 
-.second-slider-main .slider{
+
+/* second slider (vedi anche first slider) */
+.second-slider .slider-inner{
   background: #fff;
   padding: 30px 0;
 }
 
-.second-slider-main .slider img{
-  width: 260px;;
-}
 
-.second-slider-main .slider h6+p{
+.second-slider .slider-box h6+p{
   color: #031C4E;
 }
 
 .second-slider-main .slider a{
   margin-top: 15px;
 }
+/* end second slider*/
 
+
+/* footer */
 .bottom-footer{
   background-color: #031C4E;
   padding: 30px 0;
@@ -271,16 +310,21 @@ h1{
 }
 
 .bottom-footer ul li{
-  padding: 5px 0;  
+  padding: 5px 0;
+  font-weight: 500;
 }
 
+.bottom-footer ul li,
 .bottom-footer ul li a{
   color: #7A859D;
 }
 
 .bottom-footer ul.list-inline i{
   font-size: 23px;
+  padding-right: 10px;
 }
+/* end footer */
+
 
 /* Media Query */
 @media screen and (min-width: 768px){
@@ -291,9 +335,13 @@ h1{
   .showing-boxes{
     min-height: 200px;
   }
+
+  .second-slider .slider-box img{
+    width: 300px;
+  }
 }
 
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 992px){
   h1{
     font-size: 60px;
   }
