--- a/css/style.css
+++ b/css/style.css
@@ -345,6 +345,10 @@ h1{
   h1{
     font-size: 60px;
   }
+  
+  h1+p{
+    font-size: 22px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
